Fix problem with section menu on small screens

--- a/src/scss/stryker/sticky-top.scss
+++ b/src/scss/stryker/sticky-top.scss
@@ -1,5 +1,7 @@
-.sticky-top-70 {
-    position: sticky;
-    top: 60px;
-    z-index: 1020;
+@include media-breakpoint-up('md', $grid-breakpoints) {
+    .sticky-top-70 {
+        position: sticky;
+        top: 60px;
+        z-index: 1020;
+    }
 }
